menu claro con efectos cool

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Menuclaro</title>
@@ -7,8 +8,37 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+
+  <link rel="stylesheet" href="/assets/css/0-head_css.css" type="text/css" />
+  <link rel="alternate" id="head_css_deferred" href="/assets/css/1-head_css.css" />
+  <link rel="alternate" id="head_css_deferred" href="/assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/css/S-menu.css" type="text/css" />
+  <link rel="stylesheet" href="/assets/css/S-claroapp.css" type="text/css" />
+  <link rel="alternate" id="head_js_deferred" href="/assets/js/3-head_js.js" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" />
+
+  <script type="text/javascript" src="/assets/js/2-head_js.js"></script>
+  <script type="text/javascript" src="/assets/js/jquery-1.12.4.js"></script>
+  <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="/assets/js/jquery-ui.js"></script>
+  <script type="text/javascript" src="/assets/js/moment.min.js"></script>
+  <script type="text/javascript" src="/assets/js/daterangepicker.js"></script>
+  <script type="text/javascript" src="/assets/js/slick.min.js"></script>
+  <script type="text/javascript" src="/assets/js/functions.js"></script>
+  <script type="text/javascript" src="/assets/js/S-claro-custom-functions.js"></script>
+  
+  <!-- <script src="/assets/js/P-ID-48_v3.js"></script> -->
+
+
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
+
+<script type="text/javascript" src="/assets/js/menupersonas.js"></script>
+
+
 </html>
